extends Node

@onready var background_music = $BackgroundMusic
@onready var dash_sfx = $DashSFX
@onready var row_sfx = $RowSFX
@onready var boost_sfx = $BoostSFX
@onready var drop_sfx = $DropSFX
@onready var youmoose_sfx = $Youmoose
@onready var button_focus_sfx = $DashSFX
@onready var button_hover_sfx = $DashSFX
@onready var button_press_sfx = $DropSFX
